# thermal

./: pyproject.toml
sauron_thermal/: agc.py  camera.py  clahe.py  cli.py  display.py  filter.py  playground.py  server.py  simple_agc.py  thermal_camera.py  to_float.py
